manifests/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-app-service
                port:
                  number: 80

    - host: api.myapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-app-service
                port:
                  number: 80
